# battery_watcher

./: .gitignore  CMakeLists.txt  config.json
src/: config.cpp  config.h  main.cpp  notifyutil.cpp  notifyutil.h  settingsdialog.cpp  settingsdialog.h  toast.cpp  toast.h  watcher.cpp  watcher.h
